# Nikash-Agent-Reliability-Harness

./: .gitignore  README.md  pyproject.toml
src/arh/: cli.py  errors.py  mcp_client.py  models.py  report.py  tasks.py
src/arh/adapters/: litellm_tools.py
src/arh/grader/: file_match.py
src/arh/metrics/: passk.py
src/arh/runner/: sandbox.py  trial.py
src/arh/store/: jsonl.py
tasks/: fs-append-001.yaml  fs-cleanup-001.yaml  fs-create-001.yaml  fs-merge-001.yaml  fs-protect-001.yaml  fs-rename-001.yaml
tasks/state/fs-append-001/: log.txt
tasks/state/fs-cleanup-001/: backup.bak  keep1.md  keep2.md  temp1.tmp
tasks/state/fs-create-001/: apple.txt  banana.txt  cherry.txt
tasks/state/fs-merge-001/: part1.txt  part2.txt
tasks/state/fs-protect-001/: draft.md  secrets.env
tasks/state/fs-rename-001/: notes.txt  report.txt
tests/: test_adapter.py  test_cli.py  test_e2e_gemini.py  test_e2e_github.py  test_file_match.py  test_gold_solutions.py  test_mcp_client_docker.py  test_models.py  test_passk.py  test_report.py  test_sandbox.py  test_store.py  test_trial_runner.py
