[project]
name = "agent-reliability-harness"
version = "0.1.0"
description = "Measure how reliably your agent uses MCP tools - pass^k, not pass@1."
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.9,<2",
    "pydantic>=2.7",
    "typer>=0.12",
    "litellm>=1.40",
    "tenacity>=8",
    "rich>=13",
    "pyyaml>=6",
]

[project.scripts]
arh = "arh.cli:app"

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arh"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "docker: requires a running Docker daemon",
    "e2e: hits real LLM APIs",
]
addopts = "-m 'not docker and not e2e'"

[tool.ruff]
line-length = 100
target-version = "py312"
